syntax = "proto3";

message ViewOfClient {
    int32 clientID = 1;
    int32 eventID = 2;
}

message  Status{
    repeated ViewOfClient views = 1;
    string nodeID = 2;
    repeated string addresses = 3;
}